src/test/ui/resolve/issue-19452.stderr
error[E0423]: `Homura::Madoka` is the name of a struct or struct variant, but this expression uses it like a function name
  --> $DIR/issue-19452.rs:19:18
   |
19 |     let homura = Homura::Madoka;
   |                  ^^^^^^^^^^^^^^ struct called like a function
   |
   = help: did you mean to write: `Homura::Madoka { /* fields */ }`?

error[E0423]: `issue_19452_aux::Homura::Madoka` is the name of a struct or struct variant, but this expression uses it like a function name
  --> $DIR/issue-19452.rs:22:18
   |
22 |     let homura = issue_19452_aux::Homura::Madoka;
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ struct called like a function
   |
   = help: did you mean to write: `issue_19452_aux::Homura::Madoka { /* fields */ }`?

error: aborting due to 2 previous errors

